--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
-    "prettier": "^1.19.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "husky": {
@@ -66,5 +67,10 @@
         }
       ]
     ]
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
