chore: working transforms

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "konva": "^7.0.2",
+    "uuid": "^8.2.0",
     "vue": "^2.6.11",
     "vue-konva": "^2.1.3"
   },
