--- a/package.json
+++ b/package.json
@@ -1,37 +1,52 @@
 {
-  "name": "cgo-canvas-editor",
+  "name": "codigo-canvas-editor",
   "version": "0.1.0",
   "author": "Chris Doty",
   "license": "MIT",
+  "description": "",
+  "main": "dist/codigo-canvas-editor.ssr.js",
+  "browser": "dist/codigo-canvas-editor.esm.js",
+  "module": "dist/codigo-canvas-editor.esm.js",
+  "unpkg": "dist/codigo-canvas-editor.min.js",
+  "files": [
+    "dist/*",
+    "src/**/*.vue"
+  ],
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "vue-cli-service serve dev/serve.js --port 8181",
+    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
+    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
+    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
-  "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.6.5",
-    "konva": "^7.0.2",
-    "uuid": "^8.2.0",
-    "vue": "^2.6.11",
-    "vue-konva": "^2.1.3"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "^9.0.1",
     "@fortawesome/fontawesome-free": "^5.13.1",
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
+    "@rollup/plugin-alias": "^2.2.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-replace": "^2.3.2",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.5",
+    "cross-env": "^7.0.2",
     "husky": "^4.2.5",
+    "konva": "^7.0.2",
+    "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
+    "rollup": "^2.7.3",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-image": "^1.0.2",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-vue": "^5.1.6",
     "sass-loader": "^7.1.0",
+    "uuid": "^8.2.0",
+    "vue": "^2.6.11",
+    "vue-konva": "^2.1.3",
     "vue-template-compiler": "^2.6.11"
   },
   "husky": {
@@ -39,39 +54,15 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "release": {
-    "branch": "master",
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      [
-        "@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
-      ],
-      "@semantic-release/changelog",
-      [
-        "@semantic-release/exec",
-        {
-          "publishCmd": "npm publish2",
-          "successCmd": "git push origin HEAD:master --tags"
-        }
-      ],
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "CHANGELOG.md",
-            "package.json"
-          ]
-        }
-      ]
-    ]
+  "peerDependencies": {
+    "axios": "^0.19.2",
+    "core-js": "^3.6.5",
+    "konva": "^7.0.2",
+    "uuid": "^8.2.0",
+    "vue": "^2.6.11",
+    "vue-konva": "^2.1.3"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "engines": {
+    "node": ">=10"
+  }
 }
